# python

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: __init__.py  test_client.py
usetransactional/: __init__.py  _http.py  client.py  errors.py  types.py
usetransactional/resources/: __init__.py  auth.py  base.py  bounces.py  emails.py  forms.py  messages.py  sms.py  stats.py  support.py  suppressions.py  templates.py
