[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usetransactional"
version = "0.1.0"
description = "Official Python SDK for Transactional - Email, SMS, and Communication APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Transactional", email = "support@transactional.so" }
]
keywords = [
    "transactional",
    "email",
    "sms",
    "api",
    "sdk",
    "messaging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://usetransactional.com"
Documentation = "https://usetransactional.com/docs"
Repository = "https://github.com/transactional-dev/transactional"
Issues = "https://github.com/transactional-dev/transactional/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/usetransactional",
]

[tool.hatch.build.targets.wheel]
packages = ["usetransactional"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
